new entities and migrations
